css/site.css
body {
	color: white;
	font-family: 'Roboto', sans-serif;
	font-weight: 100;
	margin: 0;
	background-image: url(../img/background.jpg);
	background-size: cover;
}

#acmw-logo {
	display: inline;
	max-width: 40px;
}

#ocwic-logo {
	display: inline;
	max-width: 40px;
	max-height: 40px;
}

#resume {
	display: block;
}

.title {
	text-align: center;
	font-size: 36pt;
	min-width: 415px;
	overflow: visible;
	margin-bottom: 40px;
}

.name {
	text-align: left;
  font-weight: 300;
	margin-bottom: 0px;
	font-size: 65pt;
	border-bottom: 1px solid;
}

.tagline {
	text-align: left;
	font-size: 30pt;
	margin-top: 0px;
}

.header {
	font-size: 25pt;
	padding-top: 1em;
}

